# 3-tier-Memory

./: .env.example  ISSUE-BLOCKING-STRESS-TEST.md  POLICY.md  README.md  REPLICATION-NOTES.md  TEST-MATRIX.md  TROUBLESHOOTING.md  multihop_acceptance_test.py  pyproject.toml  test_conway_simple.py
docs/: phase2_embedding_scale_results.md  phase2_signoff.md  phase2_stress_summary.json
docs/tasks/: PHASE-1-CA-GRID.md  PHASE-2-COMPLETION-REPORT.md  PHASE-2-SHARD-ROUTING.md  PHASE-3-ENERGY-FIELDS.md
docs/validation/: day1_report.json  day2_report.json
logs/: embedding_scale_test.csv  embeddings_stress_1h_errors.ndjson  embeddings_stress_1h_metrics.csv  memory_profile.json
scripts/: check_docstrings.py  check_memory_budget.py  check_spec_drift.py  demo_conway_glider.py  memory_profile.py  scale_embeddings_test.py  stress_embeddings.py  validate_day1.py  validate_day2.py  validate_event_logs.py
scripts/docs/: phase2_stress_summary.json
scripts/logs/: embeddings_stress_1h_errors.ndjson  embeddings_stress_1h_metrics.csv
src/: __init__.py
src/core/: ca_grid.py  conway.py  conway_env_adapter.py  conway_rules.py  energy.py  grid.py
src/cybermesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/embeddings/: cache.py  generator.py  similarity.py
src/energy/: __init__.py  field.py  (+1 more)
templates/: ISSUE-template.md
tests/: test_conway_baseline.py  test_conway_env_adapter.py  test_conway_rules.py  test_energy_field_basics.py  test_energy_glider_coupling.py  test_glider_detection.py  test_glider_shard_binding.py  test_grid_operations.py  test_routing_performance.py  test_shard_model.py  test_smoke.py
(+5 files in other folders)
