[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybermesh"
version = "0.1.0"
description = "3-tier memory architecture POC with LoRA wave propagation via vector shard passing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "ollama>=0.2.1",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "mkdocs>=1.5.0",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.4.0",
    "yamale>=4.0.0",
    "psutil>=5.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "C", "N", "D", "UP", "S"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--maxfail=3",
    "--durations=10"
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, dependencies)",
    "performance: Performance benchmarks",
    "hardware: Hardware-dependent tests (M3 Max specific)"
]
